[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/player/player.png" type="Texture" id=2]
[ext_resource path="res://entities/player/Player.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "turn_left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "turn_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[node name="Player" instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )
health = 3
damage = 1
speed = 200
rotation_speed = 5.0

[node name="CollisionPolygon2D" parent="." index="0"]
polygon = PoolVector2Array( 0, 7, 5, 7, 9, 5, 12, 0, 9, -5, 5, -7, 0, -7 )

[node name="Sprite" parent="." index="1"]
rotation = 1.5708
texture = ExtResource( 2 )
vframes = 2
hframes = 5
frame = 3

[node name="AnimationPlayer" parent="." index="2"]
playback_speed = 0.5
anims/idle = SubResource( 1 )
anims/turn_left = SubResource( 2 )
anims/turn_right = SubResource( 3 )

[node name="BulletSpawn" type="Position2D" parent="." index="3"]
position = Vector2( 14, 0 )

[node name="BulletDelay" type="Timer" parent="." index="4"]
pause_mode = 2
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="BulletDelay" to="." method="_on_BulletDelay_timeout"]
